--- a/style/custom.css
+++ b/style/custom.css
@@ -1,18 +1,178 @@
+/* constants section */
 :root {
     --dark-1: hsl(40 0% 5%);
     --dark-2: hsl(40 0% 10%);
     --dark-3: hsl(40 0% 15%);
     --dark-4: hsl(40 0% 20%);
     --dark-5: hsl(40 0% 25%);
-    --light-1: hsl(40 0% 70%);
-    --light-2: hsl(40 0% 75%);
-    --light-3: hsl(40 0% 80%);
-    --light-4: hsl(40 0% 85%);
-    --light-5: hsl(40 0% 90%);
 
-    --main-font-family: sans;
+    --light-1: hsl(40 0% 60%);
+    --light-2: hsl(40 0% 70%);
+    --light-3: hsl(40 0% 80%);
+    --light-4: hsl(40 0% 90%);
+    --light-5: hsl(40 0% 100%);
+
+    --red-1: hsl(10 60% 20%);
+    --red-2: hsl(10 60% 30%);
+    --red-3: hsl(10 60% 40%);
+    --red-4: hsl(10 60% 50%);
+    --red-5: hsl(10 60% 60%);
+
+    --orange-1: hsl(40 90% 20%);
+    --orange-2: hsl(40 90% 30%);
+    --orange-3: hsl(40 90% 40%);
+    --orange-4: hsl(40 90% 50%);
+    --orange-5: hsl(40 90% 60%);
+
+    --yellow-1: hsl(60 90% 20%);
+    --yellow-2: hsl(60 90% 30%);
+    --yellow-3: hsl(60 90% 40%);
+    --yellow-4: hsl(60 90% 50%);
+    --yellow-5: hsl(60 90% 60%);
+
+    --green-1: hsl(120 60% 20%);
+    --green-2: hsl(120 60% 30%);
+    --green-3: hsl(120 60% 40%);
+    --green-4: hsl(120 60% 50%);
+    --green-5: hsl(120 60% 60%);
+
+    --blue-1: hsl(200 90% 20%);
+    --blue-2: hsl(200 90% 30%);
+    --blue-3: hsl(200 90% 40%);
+    --blue-4: hsl(200 90% 50%);
+    --blue-5: hsl(200 90% 60%);
+
+    --purple-1: hsl(270 60% 20%);
+    --purple-1: hsl(270 60% 30%);
+    --purple-1: hsl(270 60% 40%);
+    --purple-1: hsl(270 60% 50%);
+    --purple-1: hsl(270 60% 60%);
+
+    --main-font-family: sans-serif;
 }
 
+/* common selectors section */
+.backgroud-dark-1 {
+    background-color: var(--dark-1);
+}
+
+.backgroud-dark-2 {
+    background-color: var(--dark-2);
+}
+
+.backgroud-dark-3 {
+    background-color: var(--dark-3);
+}
+
+.backgroud-dark-4 {
+    background-color: var(--dark-4);
+}
+
+.backgroud-dark-5 {
+    background-color: var(--dark-5);
+}
+
+.backgroud-light-1 {
+    background-color: var(--light-1);
+}
+
+.backgroud-light-2 {
+    background-color: var(--light-2);
+}
+
+.backgroud-light-3 {
+    background-color: var(--light-3);
+}
+
+.backgroud-light-4 {
+    background-color: var(--light-4);
+}
+
+.backgroud-light-5 {
+    background-color: var(--light-5);
+}
+
+.backgroud-red-1 {
+    background-color: var(--red-1);
+}
+
+.backgroud-red-2 {
+    background-color: var(--red-2);
+}
+
+.backgroud-red-3 {
+    background-color: var(--red-3);
+}
+
+.backgroud-red-4 {
+    background-color: var(--red-4);
+}
+
+.backgroud-red-5 {
+    background-color: var(--red-5);
+}
+
+.backgroud-green-1 {
+    background-color: var(--green-1);
+}
+
+.backgroud-green-2 {
+    background-color: var(--green-2);
+}
+
+.backgroud-green-3 {
+    background-color: var(--green-3);
+}
+
+.backgroud-green-4 {
+    background-color: var(--green-4);
+}
+
+.backgroud-green-5 {
+    background-color: var(--green-5);
+}
+
+.backgroud-blue-1 {
+    background-color: var(--blue-1);
+}
+
+.backgroud-blue-2 {
+    background-color: var(--blue-2);
+}
+
+.backgroud-blue-3 {
+    background-color: var(--blue-3);
+}
+
+.backgroud-blue-4 {
+    background-color: var(--blue-4);
+}
+
+.backgroud-blue-5 {
+    background-color: var(--blue-5);
+}
+
+.text-color-dark-1 {
+    color: var(--dark-1);
+}
+
+.text-color-dark-2 {
+    color: var(--dark-2);
+}
+
+.text-color-dark-3 {
+    color: var(--dark-3);
+}
+
+.text-color-dark-4 {
+    color: var(--dark-4);
+}
+
+.text-color-dark-5 {
+    color: var(--dark-5);
+}
+
+/* concrete elements section */
 body {
     background-color: var(--dark-1);
     color: var(--light-3);
@@ -20,6 +180,14 @@ body {
     font-size: 1em;
     padding: 0em;
     margin: 0em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: .1em;
 }
 
 #search-section {
@@ -51,7 +219,6 @@ body {
 
 .grid-container {
     display: inline-grid;
-    grid-template-columns: auto auto auto auto auto auto auto;
     box-sizing: border-box;
     width: 100%;
     grid-gap: .5em;
@@ -59,7 +226,7 @@ body {
 }
 
 .grid-item {
-    padding: .62em;
+    padding: 1em;
     text-align: center;
     background-color: var(--dark-3);
     text-decoration: none;
@@ -81,8 +248,63 @@ body {
     font-size: 0.8em;
     padding: .1em .3em .27em .3em;
     border-radius: .2em;
-    color: var(--dark-3);
-    background-color: var(--light-3);
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-container .container-header {
+    padding: .5em;
+    writing-mode: horizontal-tb;
+    text-orientation: mixed;
+}
+
+.flex-container .container-header h1 {
+    margin: .5em;
+}
+
+.cards-container {
+    padding: 0em;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.container-header a {
+    text-decoration: none;
+    color: var(--light-3);
+}
+
+.card {
+    float: left;
+    background-color: var(--dark-3);
+    margin: 0em;
+    border: 1px solid var(--dark-5);
+    border-radius: .25em;
+}
+
+.card-header {
+    border-bottom: 1px solid var(--dark-5);
+    padding: .5em;
+}
+
+.card a {
+    display: block;
+    padding: .25em;
+    border-color: var(--dark-5);
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    text-decoration: none;
+    color: var(--light-3);
+}
+
+.card a:hover {
+    background-color: var(--dark-4);
+}
+
+.card a:active {
+    background-color: var(--dark-2);
 }
 
 @media only screen and (max-width: 600px) {
@@ -107,10 +329,74 @@ body {
     .grid-container {
         grid-template-columns: repeat(5, minmax(0, 1fr));
     }
+
+    .width-part-md-1 {
+        width: 100%;
+    }
+    
+    .width-part-md-2 {
+        width: 50%;
+    }
+    
+    .width-part-md-3 {
+        width: 33.33333%;
+    }
+    
+    .width-part-md-4 {
+        width: 25%;
+    }
+    
+    .width-part-md-5 {
+        width: 20%;
+    }
+    
+    .width-part-md-6 {
+        width: 16.66667%;
+    }
+    
+    .width-part-md-7 {
+        width: 14.2857%;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
     .grid-container {
         grid-template-columns: repeat(7, minmax(0, 1fr));
+    }
+
+    .flex-container {
+        flex-direction: row;
+    }
+
+    .flex-container .container-header {
+        writing-mode: vertical-rl;
+    }
+
+    .width-part-lg-1 {
+        width: 100%;
+    }
+    
+    .width-part-lg-2 {
+        width: 50%;
+    }
+    
+    .width-part-lg-3 {
+        width: 33.33333%;
+    }
+    
+    .width-part-lg-4 {
+        width: 25%;
+    }
+    
+    .width-part-lg-5 {
+        width: 20%;
+    }
+    
+    .width-part-lg-6 {
+        width: 16.66667%;
+    }
+    
+    .width-part-lg-7 {
+        width: 14.2857%;
     }
 }
