--- a/style/custom.css
+++ b/style/custom.css
@@ -276,12 +276,20 @@ h1, h2, h3, h4, h5, h6, p {
     color: var(--light-3);
 }
 
+.card-wrapper {
+    width: 100%;
+    padding: .25em;
+    box-sizing: border-box;
+}
+
 .card {
     float: left;
     background-color: var(--dark-3);
     margin: 0em;
     border: 1px solid var(--dark-5);
     border-radius: .25em;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 .card-header {
@@ -297,6 +305,10 @@ h1, h2, h3, h4, h5, h6, p {
     border-style: solid;
     text-decoration: none;
     color: var(--light-3);
+}
+
+.card a:last-child {
+    border-bottom-width: 0;
 }
 
 .card a:hover {
@@ -317,11 +329,19 @@ h1, h2, h3, h4, h5, h6, p {
     .grid-container {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
+
+    .card-wrapper {
+        width: 33.3333%;
+    }
 }
 
 @media only screen and (min-width: 768px) {
     .grid-container {
         grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+
+    .card-wrapper {
+        width: 25%;
     }
 } 
 
@@ -330,32 +350,8 @@ h1, h2, h3, h4, h5, h6, p {
         grid-template-columns: repeat(5, minmax(0, 1fr));
     }
 
-    .width-part-md-1 {
-        width: 100%;
-    }
-    
-    .width-part-md-2 {
-        width: 50%;
-    }
-    
-    .width-part-md-3 {
-        width: 33.33333%;
-    }
-    
-    .width-part-md-4 {
-        width: 25%;
-    }
-    
-    .width-part-md-5 {
+    .card-wrapper {
         width: 20%;
-    }
-    
-    .width-part-md-6 {
-        width: 16.66667%;
-    }
-    
-    .width-part-md-7 {
-        width: 14.2857%;
     }
 }
 
@@ -372,31 +368,7 @@ h1, h2, h3, h4, h5, h6, p {
         writing-mode: vertical-rl;
     }
 
-    .width-part-lg-1 {
-        width: 100%;
-    }
-    
-    .width-part-lg-2 {
-        width: 50%;
-    }
-    
-    .width-part-lg-3 {
-        width: 33.33333%;
-    }
-    
-    .width-part-lg-4 {
-        width: 25%;
-    }
-    
-    .width-part-lg-5 {
-        width: 20%;
-    }
-    
-    .width-part-lg-6 {
-        width: 16.66667%;
-    }
-    
-    .width-part-lg-7 {
-        width: 14.2857%;
+    .card-wrapper {
+        width: 16.6667%;
     }
 }
