rewrtied all links to use new color scheme, added few more links

--- a/style/custom.css
+++ b/style/custom.css
@@ -43,134 +43,62 @@
     --blue-5: hsl(200 90% 60%);
 
     --purple-1: hsl(270 60% 20%);
-    --purple-1: hsl(270 60% 30%);
-    --purple-1: hsl(270 60% 40%);
-    --purple-1: hsl(270 60% 50%);
-    --purple-1: hsl(270 60% 60%);
+    --purple-2: hsl(270 60% 30%);
+    --purple-3: hsl(270 60% 40%);
+    --purple-4: hsl(270 60% 50%);
+    --purple-5: hsl(270 60% 60%);
 
     --main-font-family: sans-serif;
 }
 
 /* common selectors section */
-.backgroud-dark-1 {
-    background-color: var(--dark-1);
-}
+.backgroud-dark-1 { background-color: var(--dark-1); }
+.backgroud-dark-2 { background-color: var(--dark-2); }
+.backgroud-dark-3 { background-color: var(--dark-3); }
+.backgroud-dark-4 { background-color: var(--dark-4); }
+.backgroud-dark-5 { background-color: var(--dark-5); }
 
-.backgroud-dark-2 {
-    background-color: var(--dark-2);
-}
+.backgroud-light-1 { background-color: var(--light-1); }
+.backgroud-light-2 { background-color: var(--light-2); }
+.backgroud-light-3 { background-color: var(--light-3); }
+.backgroud-light-4 { background-color: var(--light-4); }
+.backgroud-light-5 { background-color: var(--light-5); }
 
-.backgroud-dark-3 {
-    background-color: var(--dark-3);
-}
+.backgroud-red-1 { background-color: var(--red-1); }
+.backgroud-red-2 { background-color: var(--red-2); }
+.backgroud-red-3 { background-color: var(--red-3); }
+.backgroud-red-4 { background-color: var(--red-4); }
+.backgroud-red-5 { background-color: var(--red-5); }
 
-.backgroud-dark-4 {
-    background-color: var(--dark-4);
-}
+.backgroud-orange-1 { background-color: var(--orange-1); }
+.backgroud-orange-2 { background-color: var(--orange-2); }
+.backgroud-orange-3 { background-color: var(--orange-3); }
+.backgroud-orange-4 { background-color: var(--orange-4); }
+.backgroud-orange-5 { background-color: var(--orange-5); }
 
-.backgroud-dark-5 {
-    background-color: var(--dark-5);
-}
+.backgroud-green-1 { background-color: var(--green-1); }
+.backgroud-green-2 { background-color: var(--green-2); }
+.backgroud-green-3 { background-color: var(--green-3); }
+.backgroud-green-4 { background-color: var(--green-4); }
+.backgroud-green-5 { background-color: var(--green-5); }
 
-.backgroud-light-1 {
-    background-color: var(--light-1);
-}
+.backgroud-blue-1 { background-color: var(--blue-1); }
+.backgroud-blue-2 { background-color: var(--blue-2); }
+.backgroud-blue-3 { background-color: var(--blue-3); }
+.backgroud-blue-4 { background-color: var(--blue-4); }
+.backgroud-blue-5 { background-color: var(--blue-5); }
 
-.backgroud-light-2 {
-    background-color: var(--light-2);
-}
+.backgroud-purple-1 { background-color: var(--purple-1); }
+.backgroud-purple-2 { background-color: var(--purple-2); }
+.backgroud-purple-3 { background-color: var(--purple-3); }
+.backgroud-purple-4 { background-color: var(--purple-4); }
+.backgroud-purple-5 { background-color: var(--purple-5); }
 
-.backgroud-light-3 {
-    background-color: var(--light-3);
-}
-
-.backgroud-light-4 {
-    background-color: var(--light-4);
-}
-
-.backgroud-light-5 {
-    background-color: var(--light-5);
-}
-
-.backgroud-red-1 {
-    background-color: var(--red-1);
-}
-
-.backgroud-red-2 {
-    background-color: var(--red-2);
-}
-
-.backgroud-red-3 {
-    background-color: var(--red-3);
-}
-
-.backgroud-red-4 {
-    background-color: var(--red-4);
-}
-
-.backgroud-red-5 {
-    background-color: var(--red-5);
-}
-
-.backgroud-green-1 {
-    background-color: var(--green-1);
-}
-
-.backgroud-green-2 {
-    background-color: var(--green-2);
-}
-
-.backgroud-green-3 {
-    background-color: var(--green-3);
-}
-
-.backgroud-green-4 {
-    background-color: var(--green-4);
-}
-
-.backgroud-green-5 {
-    background-color: var(--green-5);
-}
-
-.backgroud-blue-1 {
-    background-color: var(--blue-1);
-}
-
-.backgroud-blue-2 {
-    background-color: var(--blue-2);
-}
-
-.backgroud-blue-3 {
-    background-color: var(--blue-3);
-}
-
-.backgroud-blue-4 {
-    background-color: var(--blue-4);
-}
-
-.backgroud-blue-5 {
-    background-color: var(--blue-5);
-}
-
-.text-color-dark-1 {
-    color: var(--dark-1);
-}
-
-.text-color-dark-2 {
-    color: var(--dark-2);
-}
-
-.text-color-dark-3 {
-    color: var(--dark-3);
-}
-
-.text-color-dark-4 {
-    color: var(--dark-4);
-}
-
-.text-color-dark-5 {
-    color: var(--dark-5);
-}
+.text-color-dark-1 { color: var(--dark-1); }
+.text-color-dark-2 { color: var(--dark-2); }
+.text-color-dark-3 { color: var(--dark-3); }
+.text-color-dark-4 { color: var(--dark-4); }
+.text-color-dark-5 { color: var(--dark-5); }
 
 /* concrete elements section */
 body {
@@ -248,6 +176,8 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 0.8em;
     padding: .1em .3em .27em .3em;
     border-radius: .2em;
+    min-width: 1em;
+    text-align: center;
 }
 
 .flex-container {
@@ -295,6 +225,7 @@ h1, h2, h3, h4, h5, h6, p {
 .card-header {
     border-bottom: 1px solid var(--dark-5);
     padding: .75em;
+    background-color: var(--dark-5);
 }
 
 .card a {
@@ -341,7 +272,7 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     .card-wrapper {
-        width: 25%;
+        width: 33.3333%;
     }
 } 
 
@@ -351,7 +282,7 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     .card-wrapper {
-        width: 20%;
+        width: 25%;
     }
 }
 
