updated style, updated links

--- a/style/custom.css
+++ b/style/custom.css
@@ -76,6 +76,12 @@
 .backgroud-orange-4 { background-color: var(--orange-4); }
 .backgroud-orange-5 { background-color: var(--orange-5); }
 
+.backgroud-yellow-1 { background-color: var(--yellow-1); }
+.backgroud-yellow-2 { background-color: var(--yellow-2); }
+.backgroud-yellow-3 { background-color: var(--yellow-3); }
+.backgroud-yellow-4 { background-color: var(--yellow-4); }
+.backgroud-yellow-5 { background-color: var(--yellow-5); }
+
 .backgroud-green-1 { background-color: var(--green-1); }
 .backgroud-green-2 { background-color: var(--green-2); }
 .backgroud-green-3 { background-color: var(--green-3); }
