--- a/style/cv.css
+++ b/style/cv.css
@@ -1,5 +1,6 @@
 body {
     padding: 1em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -29,7 +30,7 @@ h1, h2, h3, h4, h5, h6, p {
     margin: .1em;
 }
 
-#bullets-container ul {
+#bullets-container {
     padding-left: 1em;
 }
 
